cli/tests/testdata/package_json/deno_json/main.check.out
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _strValue1: string = NUMBER_VALUE;
      ~~~~~~~~~~
    at file:///[WILDCARD]/main.ts:8:7

TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _strValue2: string = test.getValue();
      ~~~~~~~~~~
    at file:///[WILDCARD]/main.ts:9:7

Found 2 errors.
